<resources>
    <string name="app_name">Laptop Store</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_profile">Profile</string>
    <string name="required_price">%d Dollar</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Tambah ke Keranjang : %d Dollar</string>
    <string name="total_order">Total pesanan : %d Dollar</string>
    <string name="back">Back</string>
    <string name="dicoding_reward">Dicoding Reward</string>
    <string name="share_message">Hey, I have order %1$d items in LaptopStore with total %2$d Dollar. Do you want to save this receipt?</string>
</resources>