package com.example.laptopstore.model

data class OrderLaptop(
    val laptop: Laptop,
    val count: Int
)